--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -4,14 +4,15 @@
     android:layout_height="wrap_content"
     android:background="@color/interface_color"
     android:orientation="vertical"
-    android:padding="4dp"
-    android:layout_margin="5dp">
+    android:padding="2dp"
+    android:layout_marginBottom="2dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="4dp">
+        >
 
         <TextView
             android:id="@+id/Food_Name_Lb"
