--- a/app/src/main/res/layout/fragment_nav__bar.xml
+++ b/app/src/main/res/layout/fragment_nav__bar.xml
@@ -71,6 +71,7 @@
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textAlignment="center"
+                android:onClick="To_Breakfast_Recycler"
                 >
 
             </TextView>
@@ -80,6 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/calorie_counter_icon"
+                android:onClick="To_Breakfast_Recycler"
                 />
 
         </LinearLayout>
