--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="3">
 
         <Button
             android:id="@+id/minus_1_Button"
@@ -83,8 +83,23 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_weight="1"
+            android:onClick="Minus_Button_Pressed"
             android:visibility="invisible">
         </Button>
+
+        <TextView
+            android:id="@+id/Quantity_Multiplier_Textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:textAlignment="center"
+            android:layout_margin="6dp"
+            android:textSize="15sp"
+            android:backgroundTint="@color/interface_color"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:visibility="invisible"/>
 
         <Button
             android:id="@+id/plus_1_Button"
@@ -97,6 +112,7 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_weight="1"
+            android:onClick="Add_Button_Pressed"
             android:visibility="invisible">
         </Button>
 
@@ -293,7 +309,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/potassium"
                         android:layout_below="@+id/potassium"
-                        android:layout_marginTop="18dp"
+                        android:layout_marginTop="12dp"
                         android:text="@string/total_carbohydrate"
                         android:textColor="@android:color/background_dark"
                         android:textSize="16sp"/>
@@ -315,14 +331,14 @@
                         android:layout_height="wrap_content"
                         android:layout_alignEnd="@+id/total_carbohydrate"
                         android:layout_below="@+id/total_carbohydrate"
-                        android:layout_marginTop="23dp"
+                        android:layout_marginTop="12dp"
                         android:text="@string/sugars"
                         android:textColor="@android:color/black"
                         android:textSize="16sp"/>
 
                     <TextView
                         android:id="@+id/sugar_r"
-                        android:layout_width="120dp"
+                        android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/total_carbonhydrate_r"
                         android:layout_alignTop="@+id/sugar"
@@ -359,7 +375,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignEnd="@+id/sodiuim"
                         android:layout_below="@+id/dietary_fiber"
-                        android:layout_marginTop="11dp"
+                        android:layout_marginTop="12dp"
                         android:text="@string/protein"
                         android:textColor="@android:color/black"
                         android:textSize="16sp"/>
@@ -381,7 +397,7 @@
                         android:layout_height="100dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="5dp"
                         app:srcCompat="@android:color/background_light"/>
                 </RelativeLayout>
             </LinearLayout>
@@ -400,7 +416,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/Search_Bar"
         android:layout_centerHorizontal="true"
         android:layout_weight="1"/>
@@ -411,7 +427,7 @@
             android:layout_height="wrap_content"
             android:text="Add Breakfast"
             android:layout_margin="6dp"
-            android:textSize="15sp"
+            android:textSize="12sp"
             android:backgroundTint="@color/interface_color"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -427,7 +443,7 @@
             android:layout_height="wrap_content"
             android:text="Add Lunch"
             android:layout_margin="6dp"
-            android:textSize="15sp"
+            android:textSize="12sp"
             android:backgroundTint="@color/interface_color"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -443,7 +459,7 @@
             android:layout_height="wrap_content"
             android:text="Add Dinner"
             android:layout_margin="6dp"
-            android:textSize="15sp"
+            android:textSize="12sp"
             android:backgroundTint="@color/interface_color"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -461,7 +477,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         tools:layout="@layout/fragment_nav__bar"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="8dp"
         android:layout_gravity="bottom"
         />
 
