--- a/app/src/main/res/layout/fragment_nav__bar.xml
+++ b/app/src/main/res/layout/fragment_nav__bar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal"
-    android:weightSum="3"
+    android:weightSum="4"
     android:layout_gravity="bottom"
     android:layout_marginBottom="0dp"
     >
@@ -86,6 +86,44 @@
 
         </LinearLayout>
 
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Home_Section_Card"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/interface_color"
+        android:layout_weight="1"
+        >
+
+        <LinearLayout
+            android:id="@+id/Home_Layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:onClick="Home_Button_Pressed"
+            >
+
+            <TextView
+                android:id="@+id/Home_Text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Homepage"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textAlignment="center"
+
+                >
+            </TextView>
+
+            <ImageView
+                android:id="@+id/Home_Img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/homepage"
+
+                />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
