--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -34,7 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Food Nutrition Info:"
-                android:textStyle="bold"
+                android:textSize="23sp"
+                android:textAlignment="center"
                 android:textColor="@color/black"/>
 
             <Spinner
@@ -60,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Breakfast"
-            android:textSize="10sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"
             android:textColor="@color/black"
