--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -42,15 +42,17 @@
             <Spinner
                 android:id="@+id/Option_1_Spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="boo"
+                android:entries="@array/Food_Options"
                 />
             <Spinner
                 android:id="@+id/Option_2_Spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:entries="@array/Food_Options"
                 />
 
 
