--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -82,12 +82,21 @@
                 android:orientation="vertical" />
         </ScrollView>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:isScrollContainer="true"
+            android:overScrollMode="never"
             tools:itemCount="4" />
 
 
+
+
+        </ScrollView>
     </LinearLayout>
 </LinearLayout>
