--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -61,7 +61,7 @@
 
         <TextView
 
-            android:id="@+id/Title_Label"
+            android:id="@+id/Breakfast_Title_Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Breakfast"
@@ -84,7 +84,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view1"
@@ -92,11 +92,87 @@
             android:layout_height="0dp"
             android:isScrollContainer="true"
             android:overScrollMode="never"
-            tools:itemCount="4" />
+            tools:itemCount="4">
 
+        </androidx.recyclerview.widget.RecyclerView>
 
 
 
         </ScrollView>
+
+
+        <TextView
+
+            android:id="@+id/Lunch_Label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lunch"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="10dp"
+            />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:isScrollContainer="true"
+                android:overScrollMode="never"
+                tools:itemCount="4" />
+        </ScrollView>
+
+
+        <TextView
+
+            android:id="@+id/Dinner_Label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Dinner"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="10dp"
+            />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:isScrollContainer="true"
+                android:overScrollMode="never"
+                tools:itemCount="4" />
+        </ScrollView>
+
     </LinearLayout>
 </LinearLayout>
