--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -100,6 +100,41 @@
 
         </ScrollView>
 
+        <LinearLayout
+            android:id="@+id/Breakfast_Total_Linear_Layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:layout_marginBottom="20dp">
+
+            <TextView
+                android:id="@+id/Breakfast_Total_Lb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Breakfast Totals"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/Dymanic_Sum1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="value 1"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/Breakfast_Dynamic_Sum2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="value 2"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
 
         <TextView
 
