--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,201 +11,131 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         tools:layout="@layout/fragment_title"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="10dp"/>
 
-        />
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:layout_margin="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <TextView
-                android:id="@+id/food_data_picker_lb"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Filter:"
-                android:textSize="15sp"
-                android:textAlignment="center"
-                android:textColor="@color/black"/>
-
-
-            <Spinner
-                android:id="@+id/Option1Spinner"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:textColor="@color/black"
-                android:entries="@array/Food_Options"/>
-            <Spinner
-                android:id="@+id/Option2Spinner"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:textColor="@color/black"
-                android:entries="@array/Food_Options"
-            />
-
-        </LinearLayout>
-
-
-
-        <TextView
-
-            android:id="@+id/Breakfast_Title_Label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Breakfast"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:isScrollContainer="true"
-            android:overScrollMode="never"
-            tools:itemCount="4">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-
-
-        </ScrollView>
-
-        <LinearLayout
-            android:id="@+id/Breakfast_Total_Linear_Layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="3"
-            android:layout_marginBottom="20dp">
+                android:orientation="horizontal"
+                android:weightSum="3">
+                <TextView
+                    android:id="@+id/food_data_picker_lb"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Filter:"
+                    android:textSize="15sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"/>
+                <Spinner
+                    android:id="@+id/Option1Spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:entries="@array/Food_Options"/>
+                <Spinner
+                    android:id="@+id/Option2Spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:entries="@array/Food_Options"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/Breakfast_Total_Lb"
+                android:id="@+id/Breakfast_Title_Label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Breakfast Totals"
+                android:text="Breakfast"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
                 android:textColor="@color/black"
-                android:textSize="12sp"
-                android:layout_weight="1"/>
-            <TextView
-                android:id="@+id/Dymanic_Sum1"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="value 1"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/Breakfast_Dynamic_Sum2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="value 2"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-
-        <TextView
-
-            android:id="@+id/Lunch_Label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lunch"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:layout_height="wrap_content" android:nestedScrollingEnabled="false" tools:itemCount="4"/>
 
             <LinearLayout
+                android:id="@+id/Breakfast_Total_Linear_Layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
+                android:orientation="horizontal"
+                android:weightSum="3"
+                android:layout_marginBottom="20dp">
+                <TextView
+                    android:id="@+id/Breakfast_Total_Lb"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Breakfast Totals"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/Dymanic_Sum1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="value 1"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/Breakfast_Dynamic_Sum2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="value 2"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:layout_weight="1"/>
+            </LinearLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/Lunch_Label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lunch"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view2"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:isScrollContainer="true"
-                android:overScrollMode="never"
-                tools:itemCount="4" />
-        </ScrollView>
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                tools:itemCount="4"/>
 
-
-        <TextView
-
-            android:id="@+id/Dinner_Label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Dinner"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/Dinner_Label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:text="Dinner"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view3"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:isScrollContainer="true"
-                android:overScrollMode="never"
-                tools:itemCount="4" />
-        </ScrollView>
+                android:layout_height="wrap_content" android:nestedScrollingEnabled="false" tools:itemCount="4"/>
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
